# realty-agent-api

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CODE_QUALITY.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
alembic/: env.py
api_template/: server.py
api_template/api/common/: api_exceptions.py  errors.py  pagination.py
api_template/api/v1/: README.md  dependencies.py  router.py
api_template/celery/: __init__.py  app.py
api_template/celery/config/: celery_beat_schedule.yaml  celery_config.py  celery_settings.py
api_template/celery/core/: base.py  decorators.py  health_check.py
api_template/celery/monitoring/: flower_config.py
api_template/celery/tasks/: __init__.py  general_tasks.py  user_tasks.py
api_template/config/: security.py  settings.py  versioning.py
api_template/db/: base.py  session.py
api_template/db/models/: task.py  user.py
api_template/middleware/: README.md  auth_middleware.py  ratelimit_middleware.py  request_middleware.py  security_headers_middleware.py
api_template/prompts/: example.py  manager.py
api_template/prompts/rag_assistant/: prompt.yaml
api_template/queue/: README.md  setup.py
api_template/queue/config/: queue_settings.py  queue_types.py  queues.yaml
api_template/tools/: README.md
api_template/utils/: README.md  freeze.py  logging.py  semantic_search.py
docs/database/: README.md
docs/diagrams/: c4.mermaid
docs/tutoriais/: analise-casos-de-uso.md  celery-chain.md  celery-class-based-tasks.md  queues-vs-apis.md
scripts/: run_migration.sh
(+41 files in other folders)
